build: add ed25519-dalek dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 description = "A system integrity checker that unlocks a LUKS-encrypted disk when the integrity of the system is verified."
 
 [dependencies]
+ed25519-dalek = "2.1.1"
 notify = "8.0.0"
 sha2 = "0.10.9"
