build: add toml dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
 notify = "8.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 sha2 = "0.10.9"
+toml = "0.8.23"
