--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "A system integrity checker that unlocks a LUKS-encrypted disk whe
 
 [dependencies]
 ciborium = "0.2.2"
+clap = { version = "4.5.40", features = ["cargo"] }
 ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
 notify = "8.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
