--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 description = "A system integrity checker that unlocks a LUKS-encrypted disk when the integrity of the system is verified."
 
 [dependencies]
+tracing = "0.1.41"
 ciborium = "0.2.2"
 clap = { version = "4.5.40", features = ["cargo"] }
 ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
@@ -12,3 +13,4 @@ notify = "8.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 sha2 = "0.10.9"
 toml = "0.8.23"
+tracing-subscriber = "0.3.19"
