--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ toml = "0.8.23"
 tracing-subscriber = "0.3.19"
 cryptsetup-rs = "0.3.2"
 tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
+tokio-util = "0.7.15"
