--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0.219", features = ["derive"] }
 sha2 = "0.10.9"
 toml = "0.8.23"
 tracing-subscriber = "0.3.19"
+cryptsetup-rs = "0.3.2"
