--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,13 @@ serde = { version = "1.0.219", features = ["derive"] }
 sha2 = "0.10.9"
 toml = "0.8.23"
 tracing-subscriber = "0.3.19"
-cryptsetup-rs = "0.3.2"
-tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
+tokio = { version = "1.45.1", features = [
+	"macros",
+	"rt-multi-thread",
+	"signal",
+	"sync",
+] }
 tokio-util = "0.7.15"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+cryptsetup-rs = "0.3.2"
