refactor(ansible): move all instances to the hardened group

--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -1,36 +1,38 @@
 all:
-  hosts:
-    spark-primary:
-      ansible_user: root
-      ansible_host: 192.82.67.228
-      ansible_port: 22220
-    hadoop-yarn:
-      ansible_user: root
-      ansible_host: 192.82.67.228
-      ansible_port: 22221
-    airflow:
-      ansible_user: root
-      ansible_host: 192.82.67.228
-      ansible_port: 22222
-    atlas:
-      ansible_user: root
-      ansible_host: 192.82.67.228
-      ansible_port: 22223
-    spark-worker1:
-      ansible_user: root
-      ansible_host: 192.82.67.228
-      ansible_port: 22224
-    spark-worker2:
-      ansible_user: root
-      ansible_host: 192.82.67.228
-      ansible_port: 22225
-    config:
-      ansible_user: root
-      ansible_host: 192.82.67.228
-      ansible_port: 22227
-    source-control:
-      ansible_user: root
-      ansible_host: 192.82.67.228
-      ansible_port: 22228
-  vars:
-    secure_volume_path: /mnt/secure
+  children:
+    hardened:
+      vars:
+        secure_volume_path: /mnt/secure
+      hosts:
+        spark-primary:
+          ansible_user: root
+          ansible_host: 192.82.67.228
+          ansible_port: 22220
+        hadoop-yarn:
+          ansible_user: root
+          ansible_host: 192.82.67.228
+          ansible_port: 22221
+        airflow:
+          ansible_user: root
+          ansible_host: 192.82.67.228
+          ansible_port: 22222
+        atlas:
+          ansible_user: root
+          ansible_host: 192.82.67.228
+          ansible_port: 22223
+        spark-worker1:
+          ansible_user: root
+          ansible_host: 192.82.67.228
+          ansible_port: 22224
+        spark-worker2:
+          ansible_user: root
+          ansible_host: 192.82.67.228
+          ansible_port: 22225
+        config:
+          ansible_user: root
+          ansible_host: 192.82.67.228
+          ansible_port: 22227
+        source-control:
+          ansible_user: root
+          ansible_host: 192.82.67.228
+          ansible_port: 22228
