infra: add playbooks for mounting and remounting LUKS-encrypted partition

--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -2,6 +2,7 @@ all:
   children:
     hardened:
       vars:
+        secure_volume_name: vda2_crypt
         secure_volume_path: /mnt/secure
       hosts:
         spark-primary:
