--- a/ansible/docker-on-luks.yml
+++ b/ansible/docker-on-luks.yml
@@ -1,7 +1,19 @@
 ---
-- name: Set up hardened instances
+- name: Unmount encrypted partition
   hosts: hardened
+  vars_prompt:
+    - name: passphrase
+      prompt: Enter passphrase for LUKS partition
+      private: yes
   tasks:
+    - name: Disallow user to run sudo
+      become: true
+      community.general.sudoers:
+        name: "{{ sudo_user }}-root"
+        user: "{{ sudo_user }}"
+        nopassword: false
+        commands: ALL
+        state: absent
     - name: Check if Docker Compose is available
       command: docker compose version
       register: docker_compose_check
@@ -52,3 +64,31 @@
             name: containerd
             state: started
       when: docker_daemon_config_check.rc != 0
+    - name: Open LUKS partition
+      become: true
+      community.crypto.luks_device:
+        device: "{{ luks_device_path }}"
+        passphrase: "{{ passphrase }}"
+        name: "{{ luks_volume_name }}"
+        state: opened
+    - name: Ensure filesystem on an encrypted partition
+      become: true
+      filesystem:
+        fstype: ext4
+        dev: "/dev/mapper/{{ luks_volume_name }}"
+    - name: Mount secure partition
+      become: true
+      mount:
+        src: "/dev/mapper/{{ luks_volume_name }}"
+        path: "{{ luks_volume_mount_path }}"
+        fstype: ext4
+        state: mounted
+    - name: Start Docker services
+      become: true
+      service:
+        name: "{{ item }}"
+        state: started
+      loop:
+        - docker
+        - docker.socket
+        - containerd
