--- a/ansible/docker-on-luks.yml
+++ b/ansible/docker-on-luks.yml
@@ -14,6 +14,31 @@
         nopassword: false
         commands: ALL
         state: absent
+    - name: Open LUKS partition
+      become: true
+      community.crypto.luks_device:
+        device: "{{ luks_device_path }}"
+        passphrase: "{{ passphrase }}"
+        name: "{{ luks_volume_name }}"
+        state: opened
+    - name: Ensure filesystem on an encrypted partition
+      become: true
+      filesystem:
+        fstype: ext4
+        dev: "/dev/mapper/{{ luks_volume_name }}"
+    - name: Create a mount point for the partition
+      become: true
+      file:
+        path: "{{ luks_volume_mount_path }}"
+        mode: "0770"
+        state: directory
+    - name: Mount secure partition
+      become: true
+      mount:
+        src: "/dev/mapper/{{ luks_volume_name }}"
+        path: "{{ luks_volume_mount_path }}"
+        fstype: ext4
+        state: mounted
     - name: Check if Docker Compose is available
       command: docker compose version
       register: docker_compose_check
@@ -51,43 +76,13 @@
               {
                 "data-root": "/mnt/secure/docker"
               }
-        - name: Start Docker services (1/3)
-          service:
-            name: docker
-            state: started
-        - name: Start Docker services (2/3)
-          service:
-            name: docker.socket
-            state: started
-        - name: Start Docker services (3/3)
-          service:
-            name: containerd
-            state: started
       when: docker_daemon_config_check.rc != 0
-    - name: Open LUKS partition
-      become: true
-      community.crypto.luks_device:
-        device: "{{ luks_device_path }}"
-        passphrase: "{{ passphrase }}"
-        name: "{{ luks_volume_name }}"
-        state: opened
-    - name: Ensure filesystem on an encrypted partition
-      become: true
-      filesystem:
-        fstype: ext4
-        dev: "/dev/mapper/{{ luks_volume_name }}"
-    - name: Mount secure partition
-      become: true
-      mount:
-        src: "/dev/mapper/{{ luks_volume_name }}"
-        path: "{{ luks_volume_mount_path }}"
-        fstype: ext4
-        state: mounted
     - name: Start Docker services
       become: true
       service:
         name: "{{ item }}"
         state: started
+        enabled: false # Cannot enable it, because Docker works on a LUKS partition
       loop:
         - docker
         - docker.socket
