--- a/ansible/inventory.yml
+++ b/ansible/inventory.yml
@@ -1,5 +1,8 @@
 all:
   vars:
+    ansible_user: ansible
+    ansible_ssh_private_key_file: secrets/ansible.pem
+    ansible_become_password: "{{ lookup('password', 'secrets/ansible_user_password', length=24) }}"
     sudo_user: unitel
     sudo_user_public_key: ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAICHAWq/N8I40Ng6j3z55QtrP00LQzYcPlxuKq4XKF3fO
     admin_users:
@@ -7,13 +10,14 @@ all:
         ssh_public_key: "{{ lookup('file', 'files/oleg.pub') }}"
       - name: tulgaa
         ssh_public_key: "{{ lookup('file', 'files/tulgaa.pub') }}"
+      - name: ansible
+        ssh_public_key: "{{ lookup('file', 'files/ansible.pub') }}"
+        password: "{{ lookup('password',  'secrets/ansible_user_password', length=24, encrypt='sha512_crypt') }}"
   hosts:
     clickhouse:
-      ansible_user: root
       ansible_host: 192.82.67.228
       ansible_port: 22226
     minio:
-      ansible_user: root
       ansible_host: 192.82.67.228
       ansible_port: 22229
   children:
@@ -32,23 +36,18 @@ all:
               - /dev/vdb
           hosts:
             airflow:
-              ansible_user: root
               ansible_host: 192.82.67.228
               ansible_port: 22222
             atlas:
-              ansible_user: root
               ansible_host: 192.82.67.228
               ansible_port: 22223
             spark-primary:
-              ansible_user: root
               ansible_host: 192.82.67.228
               ansible_port: 22220
             spark-worker1:
-              ansible_user: root
               ansible_host: 192.82.67.228
               ansible_port: 22224
             spark-worker2:
-              ansible_user: root
               ansible_host: 192.82.67.228
               ansible_port: 22225
         encrypted_volume:
@@ -56,14 +55,11 @@ all:
             luks_device_path: /dev/vda2
           hosts:
             hadoop-yarn:
-              ansible_user: root
               ansible_host: 192.82.67.228
               ansible_port: 22221
             config:
-              ansible_user: root
               ansible_host: 192.82.67.228
               ansible_port: 22227
             source-control:
-              ansible_user: root
               ansible_host: 192.82.67.228
               ansible_port: 22228
